[gd_scene load_steps=94 format=3 uid="uid://c1wbla7i84yc"]

[ext_resource type="Script" path="res://real_nut_enemy.gd" id="1_10eak"]
[ext_resource type="Texture2D" uid="uid://cys0ohgkf067h" path="res://Peanut-explo.png" id="2_dn3r1"]
[ext_resource type="Texture2D" uid="uid://cqn1aa57xj88w" path="res://Peanut-Idle.png" id="2_h1lml"]
[ext_resource type="Texture2D" uid="uid://lclo8f3m16ks" path="res://explosion.png" id="4_4d6ty"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2xbyr"]
atlas = ExtResource("2_dn3r1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4awd"]
atlas = ExtResource("2_dn3r1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpbuc"]
atlas = ExtResource("2_dn3r1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_obx0d"]
atlas = ExtResource("2_dn3r1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs06y"]
atlas = ExtResource("2_dn3r1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlreq"]
atlas = ExtResource("2_dn3r1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlffq"]
atlas = ExtResource("2_dn3r1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_war1r"]
atlas = ExtResource("2_dn3r1")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqw5u"]
atlas = ExtResource("2_dn3r1")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqnbj"]
atlas = ExtResource("2_dn3r1")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfn33"]
atlas = ExtResource("2_dn3r1")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms3hl"]
atlas = ExtResource("2_dn3r1")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p3bj"]
atlas = ExtResource("2_dn3r1")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wvti"]
atlas = ExtResource("2_dn3r1")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwd5m"]
atlas = ExtResource("2_dn3r1")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h2lm"]
atlas = ExtResource("2_dn3r1")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mikue"]
atlas = ExtResource("2_dn3r1")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5lqu"]
atlas = ExtResource("2_dn3r1")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0gbh"]
atlas = ExtResource("2_dn3r1")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4hrb"]
atlas = ExtResource("2_dn3r1")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klv40"]
atlas = ExtResource("2_dn3r1")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f86j1"]
atlas = ExtResource("2_dn3r1")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad4sh"]
atlas = ExtResource("2_dn3r1")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqn3"]
atlas = ExtResource("2_dn3r1")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qs8u"]
atlas = ExtResource("2_dn3r1")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5w6t"]
atlas = ExtResource("2_dn3r1")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wymye"]
atlas = ExtResource("2_dn3r1")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xab1"]
atlas = ExtResource("2_dn3r1")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2olab"]
atlas = ExtResource("2_dn3r1")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvnic"]
atlas = ExtResource("2_dn3r1")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5d4c"]
atlas = ExtResource("2_h1lml")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uuna"]
atlas = ExtResource("2_h1lml")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffu25"]
atlas = ExtResource("2_h1lml")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlcd5"]
atlas = ExtResource("2_h1lml")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjh32"]
atlas = ExtResource("2_h1lml")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr5dd"]
atlas = ExtResource("2_h1lml")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5dtb"]
atlas = ExtResource("2_h1lml")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6t53"]
atlas = ExtResource("2_h1lml")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1jpc"]
atlas = ExtResource("2_h1lml")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_td1ha"]
atlas = ExtResource("2_h1lml")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m78f1"]
atlas = ExtResource("2_h1lml")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tuv5"]
atlas = ExtResource("2_h1lml")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_stkie"]
atlas = ExtResource("2_h1lml")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7gg1"]
atlas = ExtResource("2_h1lml")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ntyh"]
atlas = ExtResource("2_h1lml")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yhjb"]
atlas = ExtResource("2_h1lml")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msgcx"]
atlas = ExtResource("2_h1lml")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs7ov"]
atlas = ExtResource("2_h1lml")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgcoj"]
atlas = ExtResource("2_h1lml")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ya5v"]
atlas = ExtResource("2_h1lml")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adqq0"]
atlas = ExtResource("2_h1lml")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3r76"]
atlas = ExtResource("2_h1lml")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx3v5"]
atlas = ExtResource("2_h1lml")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxo1i"]
atlas = ExtResource("2_h1lml")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oecu7"]
atlas = ExtResource("2_h1lml")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gurnm"]
atlas = ExtResource("2_h1lml")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0eh5"]
atlas = ExtResource("2_h1lml")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_icvpw"]
atlas = ExtResource("2_h1lml")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdfbx"]
atlas = ExtResource("2_h1lml")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw76s"]
atlas = ExtResource("2_h1lml")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31v3l"]
atlas = ExtResource("2_h1lml")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8w1f"]
atlas = ExtResource("2_h1lml")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqgnp"]
atlas = ExtResource("2_h1lml")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt1wh"]
atlas = ExtResource("2_h1lml")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_44sq1"]
atlas = ExtResource("2_h1lml")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e651a"]
atlas = ExtResource("2_h1lml")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74y48"]
atlas = ExtResource("2_h1lml")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv4fp"]
atlas = ExtResource("2_h1lml")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x10us"]
atlas = ExtResource("2_h1lml")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksfgv"]
atlas = ExtResource("2_h1lml")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp50b"]
atlas = ExtResource("4_4d6ty")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60000"]
atlas = ExtResource("4_4d6ty")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjpga"]
atlas = ExtResource("4_4d6ty")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iej1y"]
atlas = ExtResource("4_4d6ty")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyrvn"]
atlas = ExtResource("4_4d6ty")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeowo"]
atlas = ExtResource("4_4d6ty")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky85j"]
atlas = ExtResource("4_4d6ty")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r86p6"]
atlas = ExtResource("4_4d6ty")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3umq3"]
atlas = ExtResource("4_4d6ty")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvmix"]
atlas = ExtResource("4_4d6ty")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctpuu"]
atlas = ExtResource("4_4d6ty")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl5e4"]
atlas = ExtResource("4_4d6ty")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jolc7"]
atlas = ExtResource("4_4d6ty")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_au0ba"]
atlas = ExtResource("4_4d6ty")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw4jb"]
atlas = ExtResource("4_4d6ty")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vays4"]
atlas = ExtResource("4_4d6ty")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0fvi7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xbyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4awd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpbuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obx0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs06y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlreq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlffq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_war1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqw5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqnbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfn33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms3hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p3bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wvti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwd5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h2lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mikue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5lqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0gbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4hrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klv40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f86j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad4sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opqn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qs8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5w6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wymye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xab1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2olab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvnic")
}],
"loop": false,
"name": &"Detonate",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5d4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uuna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffu25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlcd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjh32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr5dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5dtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6t53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1jpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td1ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m78f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tuv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stkie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7gg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ntyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yhjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msgcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs7ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgcoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ya5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adqq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3r76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx3v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxo1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oecu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gurnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0eh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icvpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdfbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw76s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31v3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8w1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqgnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt1wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44sq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e651a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74y48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv4fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x10us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksfgv")
}],
"loop": true,
"name": &"Idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp50b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60000")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjpga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iej1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyrvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeowo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky85j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r86p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3umq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvmix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctpuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl5e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jolc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au0ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw4jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vays4")
}],
"loop": false,
"name": &"explode",
"speed": 72.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p1ewg"]
radius = 178.201

[sub_resource type="CircleShape2D" id="CircleShape2D_jwmn5"]
radius = 85.1469

[node name="RealNutEnemy" type="CharacterBody2D"]
script = ExtResource("1_10eak")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.90667, 2.79496)
sprite_frames = SubResource("SpriteFrames_0fvi7")
animation = &"explode"
frame = 15
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2(0.993825, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_p1ewg")

[node name="startDetonationTimerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="startDetonationTimerArea"]
shape = SubResource("CircleShape2D_jwmn5")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="startDetonationTimerArea" to="." method="_on_start_detonation_timer_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
